# docp

./: .gitignore  .pylintrc  .readthedocs.yaml  MANIFEST.in  README.md  build.sh  pyproject.toml  requirements.txt
docp/: __init__.py
docp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docp/dbs/: chroma.py
docp/libs/: utilities.py
docp/loaders/: _chromabase.py  _chromabaseloader.py  _chromabaseloader.py.bak  _chromabasepdfloader.py  _chromabasepptxloader.py  chroma.py  chroma.py.bak  lutilities.py
docp/objects/: _pageobject.py  _slideobject.py  _textobject.py  basedoc.py  pdfdoc.py  pdfobject.py  pptxobject.py
docp/parsers/: _pdfbase.py  _pdfbaseparser.py  _pdftable.py  _pdftableparser.py  _pdftext.py  _pdftextparser.py  _pptxbaseparser.py  pdf.py  pdfparser.py  pptxparser.py
docs/source/: changelog.rst  conf.py  dbs_chroma.rst  index.rst  library.rst  libs_utilities.rst  loaders__chromabaseloader.rst  loaders__chromabasepdfloader.rst  loaders__chromabasepptxloader.rst  loaders_chromapdfloader.rst  loaders_chromapptxloader.rst  loaders_lutilities.rst  objects__docbaseobject.rst  objects__pageobject.rst  objects__slideobject.rst  objects__textobject.rst  objects_pdfobject.rst  objects_pptxobject.rst  parsers__pdfbaseparser.rst  parsers__pdftableparser.rst  parsers__pdftextparser.rst  parsers__pptxbaseparser.rst  parsers__pptxtextparser.rst  parsers_pdfparser.rst  parsers_pptxparser.rst  parsers_putilities.rst  spelling_wordlist.txt
pylintr/: pylintr.sh
pylintr/results/: dbs_chroma.plr  libs_utilities.plr  loaders__chromabase.plr  loaders__chromabaseloader.plr  loaders__chromabasepdfloader.plr  loaders__chromabasepptxloader.plr  loaders_chroma.plr  loaders_chromapdfloader.plr  loaders_chromapptxloader.plr  objects__docbaseobject.plr  objects__imgobject.plr  objects__pageobject.plr  objects__slideobject.plr  objects__textobject.plr  objects_pdfobject.plr  objects_pptxobject.plr  parsers__pdfbaseparser.plr  parsers__pdftableparser.plr  parsers__pdftextparser.plr  summary.plr  (+4 more)
