[build-system]
requires = ["wheel", "setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "docp"
description = "A basic document parsing and loading utility."
authors = [{name = "The Developers", email = "development@s3dev.uk"}]
classifiers = [
               "Development Status :: 3 - Alpha",
               "Intended Audience :: Developers",
               "Intended Audience :: End Users/Desktop",
               "Programming Language :: Python :: 3.7",
               "Programming Language :: Python :: 3.8",
               "Programming Language :: Python :: 3.9",
               "Programming Language :: Python :: 3.11",
               "Programming Language :: Python :: 3.10",
               "Programming Language :: Python :: 3.12",
               "Programming Language :: Python :: Implementation :: CPython",
               "Operating System :: POSIX :: Linux",
               "Operating System :: Microsoft :: Windows",
               "Topic :: Software Development",
               "Topic :: Software Development :: Libraries",
               "Topic :: Utilities",
              ]
dependencies = [
                "pdfplumber",
                "pandas",
                "unidecode",
                "utils4",
                ]
dynamic = ["version"]
keywords = [
            "document",
            "library",
            "parsing",
            "utility",
            "utilities",
           ]
license = {text = "GNU GPL-3"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7"

[project.urls]
# Documentation = "https://docp.readthedocs.io"
Documentation = "https://github.com/s3dev/docp"  # TODO: Replace me!
Homepage = "https://github.com/s3dev/docp"
Repository = "https://github.com/s3dev/docp"

[tool.setuptools.dynamic]
version = {attr = "docp.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["docp"]
exclude = []
